# ATELIE

./: .gitignore  CMakeLists.txt  README.md  command.md
include/: input.h  primitives.h  render.h  scene.h  state.h  ui.h
include/glad/: glad.h
src/: cube.cpp  glad.c  input.cpp  main.cpp  main.cpp.bak  primitives.cpp  render.cpp  scene.cpp  ui.cpp
